--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -10,7 +10,7 @@
 /* refresh css npm run dev */
 
 .text-orange {
-    color: #fbb03b;
+    color: #fbb03b !important;
 }
 
 .bg-orange {
@@ -21,8 +21,112 @@
     background-color: #FCBD58 !important;
 }
 
+
+
 h1.logo-text {
     font-family: 'Rubik', sans-serif;
     font-size:1.5rem;
     color:#000;
+}
+
+/* mobile menu */
+div.navMenu {
+    background:#fff;
+    position: fixed;
+    top:0;
+    left:0;
+    width:100%;
+    height:100%;
+    z-index: 400;
+    display: flex;
+    flex-direction: column;
+    overflow-y:auto;
+}
+
+div.navMenu-links {
+    text-align: left;
+    display:flex;
+    flex-direction: column;
+    margin: 0;
+    margin-top:1em !important;
+    padding: 0 1.5em;  
+    flex-grow: 1;
+}
+
+div.navMenu-link-container {
+    border-bottom: 1px #F2F2F2 solid;
+}
+
+a.navMenu-link {
+    font-family: 'Lato', sans-serif !important;
+    font-size:1.25rem !important;
+    font-weight: bold !important;
+    padding: .75em 0;
+    width: 100%;
+    display: flex;
+    cursor: pointer;
+}
+a.navMenu-link > i, span.menuLinkStyle {
+    transition: 300ms;
+}
+a.navMenu-link > i {
+    margin-left:auto;
+    font-size: 1.5rem;
+    text-decoration: none;
+}
+
+span.menuLinkStyle:hover {
+    color: #fbb03b;
+    text-decoration: underline; 
+}
+
+a.navMenu-subLink {
+    font-family: 'Lato', sans-serif !important;
+    font-size: 1.125rem !important;
+    padding:.5em 1em;
+    width: 100%;
+}
+
+.hide {
+    display: none !important;
+}
+
+.showMenu {
+    animation: slideInRight; /* referring directly to the animation's @keyframe declaration */
+    animation-duration: .5s; /* don't forget to set a duration! */
+}
+
+.hideMenu {
+    animation: slideOutRight; /* referring directly to the animation's @keyframe declaration */
+    /* animation-delay: 0s; */
+    animation-duration: .5s; /* don't forget to set a duration! */
+    animation-fill-mode: forwards;
+}
+
+footer.menuFooter {
+    font-family: 'Lato', sans-serif;
+    width: 100%;
+    padding:1em 0;
+    font-size: .8rem;   
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+footer.menuFooter > p {
+    margin:.25em 0;
+    color: #929294;
+}
+
+footer.menuFooter > p > a {
+    text-decoration: none;
+    color: #929294;
+}
+
+button.navButton {
+    transition: 300ms;
+}
+
+.ring-indigo-500:focus {
+    --tw-ring-color:#fbb03b !important;
 }
