finished mobile navigation menu, started desktop navigation menu

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1868,7 +1868,18 @@ div.navMenu-links {
 div.navMenu-link-container {
     border-bottom: 1px #F2F2F2 solid;
 }
+a.navMenu-link-desktop {
+    font-family: 'Lato', sans-serif !important;
+    --tw-text-opacity: 1;
+    color: rgb(107 114 128 / var(--tw-text-opacity));
+}
+a.navMenu-link-desktop:hover {
+    transition: 500ms;
+    /* --tw-text-opacity: 1; */
+    color: #454546;
+}
 a.navMenu-link {
+    color: #454546;
     font-family: 'Lato', sans-serif !important;
     font-size:1.25rem !important;
     font-weight: bold !important;
@@ -1885,15 +1896,27 @@ a.navMenu-link > i {
     font-size: 1.5rem;
     text-decoration: none;
 }
+span.active, i.active {
+    transition: 500ms;
+    color:#fbb03b !important;
+}
+span.active {
+    text-decoration: underline;
+}
 span.menuLinkStyle:hover {
     color: #fbb03b;
     text-decoration: underline; 
 }
 a.navMenu-subLink {
+    color: #454546;
     font-family: 'Lato', sans-serif !important;
     font-size: 1.125rem !important;
     padding:.5em 1em;
     width: 100%;
+    transition: 500ms;
+}
+a.navMenu-subLink:hover {
+    color: #FCBD58;
 }
 .hide {
     display: none !important;
@@ -1908,6 +1931,53 @@ a.navMenu-subLink {
     -webkit-animation: slideOutRight;
             animation: slideOutRight; /* referring directly to the animation's @keyframe declaration */
     /* animation-delay: 0s; */
+    -webkit-animation-duration: .5s;
+            animation-duration: .5s; /* don't forget to set a duration! */
+    -webkit-animation-fill-mode: forwards;
+            animation-fill-mode: forwards;
+}
+@-webkit-keyframes dropdown {
+    0% {max-height:0px;}
+    100% {max-height:1000px;}
+}
+@keyframes dropdown {
+    0% {max-height:0px;}
+    100% {max-height:1000px;}
+}
+@-webkit-keyframes moveup {
+    0% {max-height: 1000px;}
+    100% {padding:0;max-height:0px;}
+}
+@keyframes moveup {
+    0% {max-height: 1000px;}
+    100% {padding:0;max-height:0px;}
+}
+@-webkit-keyframes displayNone {
+    0% {opacity: 0;}
+    100% {opacity: 0;}
+}
+@keyframes displayNone {
+    0% {opacity: 0;}
+    100% {opacity: 0;}
+}
+.subMenu-container {
+    overflow:hidden;
+    padding-bottom:1em;
+}
+.hideSubMenu {
+    -webkit-animation-name: moveup, displayNone;
+            animation-name: moveup, displayNone; /* referring directly to the animation's @keyframe declaration */
+    -webkit-animation-delay: 0s, .5s;
+            animation-delay: 0s, .5s;
+    -webkit-animation-duration: .5s, 0s;
+            animation-duration: .5s, 0s; /* don't forget to set a duration! */
+    -webkit-animation-fill-mode: forwards;
+            animation-fill-mode: forwards;
+}
+.showSubMenu {
+    max-height:0px;
+    -webkit-animation-name: dropdown;
+            animation-name: dropdown; /* referring directly to the animation's @keyframe declaration */
     -webkit-animation-duration: .5s;
             animation-duration: .5s; /* don't forget to set a duration! */
     -webkit-animation-fill-mode: forwards;
@@ -1991,10 +2061,6 @@ button.navButton {
 .hover\:text-indigo-900:hover {
   --tw-text-opacity: 1;
   color: rgb(49 46 129 / var(--tw-text-opacity));
-}
-.hover\:text-indigo-500:hover {
-  --tw-text-opacity: 1;
-  color: rgb(99 102 241 / var(--tw-text-opacity));
 }
 .focus\:z-10:focus {
   z-index: 10;
