--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1071,6 +1071,18 @@ select {
 .ml-16 {
   margin-left: 4rem;
 }
+.mr-12 {
+  margin-right: 3rem;
+}
+.mr-6 {
+  margin-right: 1.5rem;
+}
+.mb-3 {
+  margin-bottom: 0.75rem;
+}
+.mr-4 {
+  margin-right: 1rem;
+}
 .block {
   display: block;
 }
@@ -1172,6 +1184,18 @@ select {
 }
 .w-screen {
   width: 100vw;
+}
+.w-2\.5 {
+  width: 0.625rem;
+}
+.w-2 {
+  width: 0.5rem;
+}
+.w-3\.5 {
+  width: 0.875rem;
+}
+.w-3 {
+  width: 0.75rem;
 }
 .min-w-0 {
   min-width: 0px;
@@ -2148,6 +2172,7 @@ p.portfolio-card-end > i {
     margin-left:auto;
     font-size: 1.25rem;
 }
+/* cta  */
 .bg-cta-beige {
     background-color: #f7f6f2;
 }
@@ -2155,6 +2180,13 @@ svg.wave {
     position:absolute;
     bottom:0;
     left:0;
+}
+/* footer */
+.bg-footer-bg {
+    background-color: #f2ece4;
+}
+.bg-footer-bg-2 {
+    background-color: #fbb03b !important;
 }
 .hover\:border-gray-300:hover {
   --tw-border-opacity: 1;
@@ -2698,6 +2730,10 @@ svg.wave {
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 
+  .md\:justify-start {
+    justify-content: flex-start;
+  }
+
   .md\:gap-6 {
     gap: 1.5rem;
   }
@@ -2747,6 +2783,10 @@ svg.wave {
 
   .md\:pr-4 {
     padding-right: 1rem;
+  }
+
+  .md\:text-left {
+    text-align: left;
   }
 
   .md\:text-lg {
@@ -2851,6 +2891,10 @@ svg.wave {
     grid-template-columns: repeat(4, minmax(0, 1fr));
   }
 
+  .lg\:grid-cols-3 {
+    grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+
   .lg\:items-center {
     align-items: center;
   }
@@ -2904,4 +2948,3 @@ svg.wave {
     padding-bottom: 8rem;
   }
 }
-
