--- a/public/css/app.css
+++ b/public/css/app.css
@@ -976,6 +976,9 @@ select {
 .z-50 {
   z-index: 50;
 }
+.z-20 {
+  z-index: 20;
+}
 .z-10 {
   z-index: 10;
 }
@@ -1897,6 +1900,22 @@ select {
     max-height:300px !important;
     overflow-y: scroll;
 }
+.headerFixed {
+    position:fixed;
+    width: 100%;
+    transition: all 0.5s;
+    top:0;
+}
+.headerFixedBg {
+    position:fixed;
+    width:100%;
+    top:0;
+    left:0;
+    z-index:20 !important;
+    height:80px;
+    background-color: white;
+    box-shadow: 0 2px 10px 0 rgba(0,0,0,0.1);
+}
 /* refresh css npm run dev */
 .text-orange {
     color: #fbb03b !important;
@@ -1926,7 +1945,7 @@ div.navMenu {
     left:0;
     width:100%;
     height:100%;
-    z-index: 400;
+    z-index: 400 !important;
     display: flex;
     flex-direction: column;
     overflow-y:auto;
@@ -2172,13 +2191,75 @@ p.portfolio-card-end > i {
     margin-left:auto;
     font-size: 1.25rem;
 }
+/* slider */
+.slider{
+    position: relative;
+    max-width: 40rem; 
+    height: 432px;
+    padding:1em 0;
+    z-index: 10;
+}
+button .fas{
+    color: rgba(69, 69, 70, .25);
+}
+.slide{ 
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: transform 1s;
+    flex-direction: column;
+    position:absolute;
+    top:1em;
+}
+.slide > img{
+    width: 80%;
+    height: 100%;
+    border-radius: 5px;
+    opacity: .9;
+    /* object-fit: cover; */
+}
+.btn-slide{
+    position:absolute;
+    top:50%;
+    z-index: 10;
+
+    height: 5.5rem;
+    width: 5.5rem;
+    cursor: pointer;
+}
+.prev{
+    left:1.25rem;
+    transform: translate(-50%, -50%);
+}
+.next{
+    right:1.25rem;
+    transform: translate(50%, -50%); 
+}
+.dots-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+}
+.dot{
+    width: 15px;
+    height: 15px;
+    border-radius: 50%;
+    margin: 15px 5px;
+    background: rgba(39,39,39, .5);
+    cursor: pointer;
+}
+.dot.active{
+    background:#272727;
+}
 /* cta  */
 .bg-cta-beige {
     background-color: #f7f6f2;
 }
 svg.wave {
     position:absolute;
-    bottom:0;
+    bottom:-1px;
     left:0;
 }
 /* footer */
