--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1032,6 +1032,10 @@ select {
   margin-top: -0.5rem;
   margin-bottom: -0.5rem;
 }
+.mx-2 {
+  margin-left: 0.5rem;
+  margin-right: 0.5rem;
+}
 .-mx-8 {
   margin-left: -2rem;
   margin-right: -2rem;
@@ -1055,6 +1059,10 @@ select {
 .-mx-3 {
   margin-left: -0.75rem;
   margin-right: -0.75rem;
+}
+.my-8 {
+  margin-top: 2rem;
+  margin-bottom: 2rem;
 }
 .ml-3 {
   margin-left: 0.75rem;
@@ -1154,6 +1162,9 @@ select {
 }
 .mr-4 {
   margin-right: 1rem;
+}
+.ml-10 {
+  margin-left: 2.5rem;
 }
 .block {
   display: block;
@@ -1278,6 +1289,9 @@ select {
 .w-3 {
   width: 0.75rem;
 }
+.w-1\/2 {
+  width: 50%;
+}
 .min-w-0 {
   min-width: 0px;
 }
@@ -1307,6 +1321,9 @@ select {
 }
 .flex-1 {
   flex: 1 1 0%;
+}
+.flex-auto {
+  flex: 1 1 auto;
 }
 .flex-shrink-0 {
   flex-shrink: 0;
@@ -1413,11 +1430,11 @@ select {
 .gap-1 {
   gap: 0.25rem;
 }
-.gap-8 {
-  gap: 2rem;
-}
 .gap-2 {
   gap: 0.5rem;
+}
+.gap-8 {
+  gap: 2rem;
 }
 .space-x-8 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-x-reverse: 0;
@@ -1522,6 +1539,9 @@ select {
 }
 .border-r {
   border-right-width: 1px;
+}
+.border-b-4 {
+  border-bottom-width: 4px;
 }
 .border-solid {
   border-style: solid;
@@ -1764,6 +1784,9 @@ select {
 }
 .pr-8 {
   padding-right: 2rem;
+}
+.pb-2 {
+  padding-bottom: 0.5rem;
 }
 .text-left {
   text-align: left;
@@ -2076,6 +2099,9 @@ select {
 /* refresh css npm run dev */
 .text-orange {
     color: #fbb03b !important;
+}
+.border-orange {
+    border-color: #fbb03b;
 }
 .bg-orange {
     background-color: #fbb03b;
@@ -2481,6 +2507,9 @@ article + article {
     color: #fbb03b;
     font-weight: bold;
 }
+.bread-crumb:hover {
+    color:#F09605;
+}
 .post-container {
     margin-top:2em;
 }
@@ -2832,6 +2861,10 @@ article + article {
     width: 100%;
   }
 
+  .sm\:w-64 {
+    width: 16rem;
+  }
+
   .sm\:max-w-md {
     max-width: 28rem;
   }
@@ -3062,6 +3095,10 @@ article + article {
     width: 66.666667%;
   }
 
+  .md\:w-32 {
+    width: 8rem;
+  }
+
   .md\:grid-cols-3 {
     grid-template-columns: repeat(3, minmax(0, 1fr));
   }
@@ -3236,6 +3273,10 @@ article + article {
     width: 66.666667%;
   }
 
+  .lg\:w-32 {
+    width: 8rem;
+  }
+
   .lg\:max-w-2xl {
     max-width: 42rem;
   }
@@ -3259,6 +3300,10 @@ article + article {
 
   .lg\:grid-cols-3 {
     grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+
+  .lg\:flex-row {
+    flex-direction: row;
   }
 
   .lg\:items-center {
@@ -3285,6 +3330,10 @@ article + article {
 
   .lg\:pb-8 {
     padding-bottom: 2rem;
+  }
+
+  .lg\:pb-6 {
+    padding-bottom: 1.5rem;
   }
 
   .lg\:pb-28 {
@@ -3320,6 +3369,10 @@ article + article {
 
   .xl\:pb-8 {
     padding-bottom: 2rem;
+  }
+
+  .xl\:pb-6 {
+    padding-bottom: 1.5rem;
   }
 
   .xl\:pb-32 {
