added side menu for post page

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -420,9 +420,17 @@ a {
     color:inherit;
 }
 
-article + article {
+article + article, .side-link + .side-link {
     margin-top:2.5rem;
     border-top:1px solid #eee;
+    padding-top:1.5rem;
+}
+article + article {
+    margin-top:2.5rem;
+    padding-top:1.5rem;
+}
+.side-link + .side-link {
+    margin-top:1.5rem;
     padding-top:1.5rem;
 }
 
