--- a/public/css/app.css
+++ b/public/css/app.css
@@ -994,6 +994,9 @@ select {
 .m-0 {
   margin: 0px;
 }
+.m-auto {
+  margin: auto;
+}
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
@@ -1108,9 +1111,6 @@ select {
 .mr-1 {
   margin-right: 0.25rem;
 }
-.ml-8 {
-  margin-left: 2rem;
-}
 .ml-16 {
   margin-left: 4rem;
 }
@@ -1186,6 +1186,9 @@ select {
 .h-56 {
   height: 14rem;
 }
+.h-80 {
+  height: 20rem;
+}
 .h-48 {
   height: 12rem;
 }
@@ -1246,15 +1249,6 @@ select {
 .w-1\/2 {
   width: 50%;
 }
-.w-40 {
-  width: 10rem;
-}
-.w-32 {
-  width: 8rem;
-}
-.w-24 {
-  width: 6rem;
-}
 .w-2\.5 {
   width: 0.625rem;
 }
@@ -1287,9 +1281,6 @@ select {
 }
 .max-w-2xl {
   max-width: 42rem;
-}
-.max-w-xs {
-  max-width: 20rem;
 }
 .max-w-lg {
   max-width: 32rem;
@@ -2201,7 +2192,12 @@ select {
     max-width:100rem;
 }
 .mt-175 {
-    margin-top:-1.75rem;
+    margin-top:0rem;
+}
+@media (min-width: 768px) {
+    .mt-175 {
+        margin-top:-1.75rem;
+    }
 }
 .scalehover {
     cursor: pointer;
@@ -2494,6 +2490,10 @@ p.portfolio-card-end > i {
 }
 button .fas{
     color: rgba(69, 69, 70, .25);
+}
+.testimonial-slide {
+    position:absolute;
+    transition: transform 1s;
 }
 .slide{ 
     width: 100%;
@@ -3247,6 +3247,14 @@ article + article {
     margin-bottom: 0px;
   }
 
+  .md\:ml-8 {
+    margin-left: 2rem;
+  }
+
+  .md\:mt-1 {
+    margin-top: 0.25rem;
+  }
+
   .md\:block {
     display: block;
   }
@@ -3275,24 +3283,12 @@ article + article {
     width: auto;
   }
 
-  .md\:w-64 {
-    width: 16rem;
-  }
-
-  .md\:w-56 {
-    width: 14rem;
-  }
-
-  .md\:w-40 {
-    width: 10rem;
+  .md\:w-2\/3 {
+    width: 66.666667%;
   }
 
   .md\:w-1\/2 {
     width: 50%;
-  }
-
-  .md\:w-2\/3 {
-    width: 66.666667%;
   }
 
   .md\:max-w-xs {
@@ -3313,6 +3309,10 @@ article + article {
 
   .md\:flex-row {
     flex-direction: row;
+  }
+
+  .md\:items-start {
+    align-items: flex-start;
   }
 
   .md\:items-center {
@@ -3340,6 +3340,12 @@ article + article {
     --tw-space-x-reverse: 0;
     margin-right: calc(2rem * var(--tw-space-x-reverse));
     margin-left: calc(2rem * calc(1 - var(--tw-space-x-reverse)));
+  }
+
+  .md\:space-x-4 > :not([hidden]) ~ :not([hidden]) {
+    --tw-space-x-reverse: 0;
+    margin-right: calc(1rem * var(--tw-space-x-reverse));
+    margin-left: calc(1rem * calc(1 - var(--tw-space-x-reverse)));
   }
 
   .md\:space-y-0 > :not([hidden]) ~ :not([hidden]) {
@@ -3481,6 +3487,10 @@ article + article {
     height: 100%;
   }
 
+  .lg\:h-80 {
+    height: 20rem;
+  }
+
   .lg\:w-80 {
     width: 20rem;
   }
@@ -3503,6 +3513,10 @@ article + article {
 
   .lg\:w-32 {
     width: 8rem;
+  }
+
+  .lg\:w-7\/12 {
+    width: 58.333333%;
   }
 
   .lg\:max-w-2xl {
@@ -3599,6 +3613,11 @@ article + article {
   .lg\:text-5xl {
     font-size: 3rem;
     line-height: 1;
+  }
+
+  .lg\:text-2xl {
+    font-size: 1.5rem;
+    line-height: 2rem;
   }
 }
 @media (min-width: 1280px) {
